@@ -13,6 +13,7 @@ Changes in Release 2.6.0
 [JOST-196] - On MetadataProviderCredentialResolver, expose the MetadataProvider used to construct the resolver
 [JOST-197] - XML providers for Async Logout extensions
 [JOST-198] - Configuration files for XMLObject providers often missing Type registrations
+[JOST-199] - SAML SOAP encoders should use the supplied outbound SOAP Envelope from the message context, if it exists 
 
 Changes in Release 2.5.3
 =============================================
